# pycharm-remote-debug-study

./: .dockerignore  .gitignore  Dockerfile  Makefile  compose.yaml  pyproject.toml
app/: main.py  web.py
docs/: cross-host-remote-debug.md  docker-setup.md  pycharm-remote-debug.md
